--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "hópverkefni",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "node-sass": "^4.12.0"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "npm-run-all": "^4.1.5",
     "stylelint": "^11.0.0",
     "stylelint-config-primer": "^8.2.1"
   },
