forsíða og staff tilbúið, bætti við lint á forsíðuna í json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@primer/css": "^13.1.0",
+    "all": "0.0.0",
     "node-sass": "^4.12.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "lint-header": "stylelint scss/header.scss --syntax scss",
     "lint-vorur": "stylelint scss/vorur.scss --syntax scss",
     "lint-staff": "stylelint scss/staff.scss --syntax scss",
+    "lint-index": "stylelint scss/forsida.scss --syntax scss",
     "lint-all": "npm-run-all --parallel lint-scss lint-vorur lint-footer lint-header lint-course"
   },
   "repository": {
