bætti linterum fyrir það sem vantaði og lagaði vorur og styles eftir linterum

--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "lint-config": "stylelint scss/config.scss --syntax scss",
     "lint-course": "stylelint scss/course.scss --syntax scss",
     "lint-footer": "stylelint scss/footer.scss --syntax scss",
-    "lint-header": "stylelint scss/header.scss --syntax scss",
+    "lint-header": "stylelint scss/header1.scss --syntax scss",
     "lint-vorur": "stylelint scss/vorur.scss --syntax scss",
     "lint-staff": "stylelint scss/staff.scss --syntax scss",
     "lint-index": "stylelint scss/forsida.scss --syntax scss",
-    "lint-all": "npm-run-all --parallel lint-scss lint-vorur lint-footer lint-header lint-course"
+    "lint-fyllaUt": "stylelint scss/fyllaUt.scss --syntax scss",
+    "lint-grid": "stylelint scss/grid.scss --syntax scss",
+    "lint-all": "npm-run-all --parallel lint-scss lint-config lint-index lint-fyllaUt lint-grid lint-vorur lint-footer lint-header lint-course lint-staff"
   },
   "repository": {
     "type": "git",
